# arbitrum-rust-colearning-Oxfanfan_

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  Cargo.toml  DOCS.md  FINAL_SUMMARY.md  GITIGNORE_GUIDE.md  GITIGNORE_OPTIMIZATION.md  LICENSE  PUSH_TO_GITHUB.md  README.md  VERIFICATION_REPORT.md  WORKSPACE_GUIDE.md  gitignore  run_tasks.ps1
crates/task1-hello-web3/: Cargo.toml
crates/task1-hello-web3/src/: main.rs
crates/task2-balance-query/: Cargo.toml
crates/task2-balance-query/src/: main.rs
crates/task3-gas-estimation/: Cargo.toml
crates/task3-gas-estimation/src/: main.rs
crates/task4-transaction/: Cargo.toml
crates/task4-transaction/src/: main.rs
crates/task5-contract-call/: Cargo.toml
crates/task5-contract-call/src/: main.rs
crates/web3-utils/: Cargo.toml
crates/web3-utils/src/: alloy_provider.rs  config.rs  ethers_provider.rs  lib.rs  utils.rs
hello_web3/: Cargo.toml
hello_web3/src/: main.rs
level2-balance-query/: Cargo.toml
level2-balance-query/src/: balance.rs
task3-gas-estimation/: Cargo.toml
task3-gas-estimation/src/: gas_estimation.rs
