[package]
name = "hello_web3"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy 核心库：提供 Provider 和 RPC 连接能力
# features = ["full"] 开启了包括 Http, PubSub, Signer 在内的完整功能
alloy = { version = "0.1", features = ["full"] }

# tokio 是 Rust 生态中最主流的异步运行时
# 访问链上数据是网络 IO 操作，必须在异步环境下运行
tokio = { version = "1.0", features = ["full"] }

# eyre 用于更优雅的错误处理，它能提供比标准库更详细的报错堆栈
eyre = "0.6"