[package]
name = "task1-hello-web3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
web3-utils = { path = "../web3-utils" }
alloy = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
