[package]
name = "task3-gas-estimation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gas_estimation"
path = "src/main.rs"

[dependencies]
web3-utils = { path = "../web3-utils" }
ethers = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
