[package]
name = "task4-transaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "transfer"
path = "src/main.rs"

[dependencies]
web3-utils = { path = "../web3-utils" }
ethers = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }