[package]
name = "web3-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
alloy = { workspace = true }
alloy-primitives = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
